# mruby-denko

./: .gitignore  .gitmodules  LICENSE  README.md  esp32_build_config.rb  main.rb  mrbgem.rake  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
components/mruby_component/: CMakeLists.txt  esp32_build_config.rb
components/mruby_component/mrbgems/mruby-denko-esp32/: LICENSE  mrbgem.rake
components/mruby_component/mrbgems/mruby-denko-esp32/mrblib/: kernel.rb
components/mruby_component/mrbgems/mruby-denko-esp32/mrblib/denko/board/: board.rb  core_io.rb  i2c.rb  spi.rb  version.rb
components/mruby_component/mrbgems/mruby-denko-esp32/src/: mruby_denko_esp32.c
components/mruby_component/mrbgems/picoruby-stubs/: mrbgem.rake
components/mruby_component/mrbgems/picoruby-stubs/include/: picoruby.h
components/mruby_component/mrbgems/picoruby-stubs/mrblib/: require.rb
esp32-2mb/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
esp32-2mb/components/mruby_component/: esp32_build_config.rb  mruby
esp32-2mb/main/: mruby_main.c
esp32-2mb/main/storage/: main.rb
esp32s2-2mb/: CMakeLists.txt  README.md  sdkconfig
esp32s2-2mb/components/mruby_component/: CMakeLists.txt
esp32s2-2mb/main/: mruby_main.c
esp32s2-2mb/main/storage/: main.rb
esp32s3-2mb/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
esp32s3-2mb/components/mruby_component/: esp32_build_config.rb
esp32s3-2mb/main/: mruby_main.c
esp32s3-2mb/main/storage/: main.rb
examples/: adc.rb  button.rb  button_led.rb  buzzer.rb  dac_adc_loopback.rb  filesystem.rb  i2c_aht1x.rb  lcd_hd44780.rb  led_blink.rb  led_breathe.rb  led_pulse.rb  led_rgb.rb  rgb_led.rb  spi_loopback.rb  wifi_mqtt_publish.rb  wifi_mqtt_subscribe.rb
main/: mruby_main.c
main/storage/: main.rb
